--- a/main.css
+++ b/main.css
@@ -1,13 +1,13 @@
 body {
-  background-color: #EDEDED;
-  color: darkgray;
+  background-color: #555454;
+  font-family: 'Poppins', sans-serif;
   }
   
   .navbar {
     max-height: 50px;
   }
   .navigation .navbar-brand {
-    color: rgb(52, 149, 165);
+    color: rgb(51, 149, 165);
     margin-left: 0px;
     flex-direction:inherit;
     font-weight: bold;
@@ -45,7 +45,7 @@ body {
     height:100%;
   }
   .active, .panel:hover {
-    border-color:rgb(52, 149, 165);
+    border-color:rgb(52, 165, 131);
     border-style: solid;
     
   }
@@ -82,7 +82,7 @@ body {
   }
   
   footer {
-  background-color: #000000;
+  background-color: #2c2c2c;
   border-top-style: solid;
   border-top-width: 5px;
   border-top-color: rgb(37, 80, 87);
